<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/switchMode"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="#FFFFFF"
        android:checked="true"
        android:gravity="right"
        android:onClick="changeMode"
        android:text="@string/night_mode_"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center|right"
        android:hint="@string/_0"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#78909C"
        android:textSize="34sp"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor,RtlHardcoded,TextSizeCheck,VisualLintTextFieldSize" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        tools:ignore="DuplicateIds">

        <Button
            android:id="@+id/clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="clear"
            android:text="@string/c"
            android:textColor="#00796B"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/modulo"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_Modulus"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="delete"
            android:text="@string/del"
            android:textColor="#00796B"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/division"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_divide"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#673AB7"
        android:orientation="horizontal"
        tools:ignore="DuplicateIds">

        <Button
            android:id="@+id/btn1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_1"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_2"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_3"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/addition"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_plus"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        tools:ignore="DuplicateIds">

        <Button
            android:id="@+id/btn4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_4"
            android:textColor="#00796B"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_5"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_6"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/subtract"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_minus"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        tools:ignore="DuplicateIds">

        <Button
            android:id="@+id/btn7"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_7"
            android:textColor="#00796B"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn8"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_8"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn9"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_9"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/multiply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/x"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        tools:ignore="DuplicateIds">

        <Button
            android:id="@+id/dual_zero"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_00"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn0"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_0_"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/decimal_point"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="onClick"
            android:text="@string/_dot"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/equals"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:onClick="equals"
            android:text="@string/_equal"
            android:textColor="#00796B"
            android:textSize="24sp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</LinearLayout>